--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "lib": ["es2022"],
-    "module": "es2022",
-    "target": "es2022",
+    "module": "ES2022",
+    "target": "ES2022",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -10,8 +10,10 @@
     "moduleResolution": "node"
   },
   "ts-node": {
+    "esm": true,
     "transpileOnly": true,
     "files": true,
     "compilerOptions": {}
-  }
+  },
+  "exclude": ["node_modules"],
 }
