--- a/classrooms/io-ts/package.json
+++ b/classrooms/io-ts/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "cmd:test": "node --no-warnings --loader ts-node/esm/transpile-only --experimental-specifier-resolution=node --test",
-    "test": "npm run cmd:test -- ./*.ts",
+    "test": "tsc --noEmit && npm run cmd:test -- ./*.ts",
     "test:watch": "npm run cmd:test -- --watch ./*.ts"
   },
   "dependencies": {
