--- a/package.json
+++ b/package.json
@@ -13,5 +13,26 @@
   },
   "dependencies": {
     "xo": "^0.54.0"
+  },
+  "xo": {
+    "prettier": true,
+    "space": true,
+    "rules": {
+      "@typescript-eslint/ban-types": "off",
+      "@typescript-eslint/naming-convention": "off",
+      "@typescript-eslint/no-redeclare": "off",
+      "@typescript-eslint/no-unnecessary-type-arguments": "off",
+      "@typescript-eslint/no-unsafe-assignment": "off",
+      "max-len": [
+        "error",
+        {
+          "code": 100
+        }
+      ],
+      "new-cap": "off",
+      "no-constant-condition": "off",
+      "no-warning-comments": "off",
+      "unicorn/no-array-for-each": "off"
+    }
   }
 }
